correction loading spinner visibility

--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -55,5 +55,6 @@
     100% {
         opacity: 0;
         display: none;
+        visibility: hidden;
     }
 }
